# Talk2PowerSystem_LLM

./: .gitignore  CHANGELOG.md  KnownIssues.adoc  README.adoc  README.md  environment.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.adoc  Governance.adoc  Support.adoc
.github/workflows/: _pull_requests.yml  release-package.yml
config/: cim.ontotext.no.cognite.yaml  cim.ontotext.yaml  config.yaml  dev+cognite.yaml  dev+retrieval+cognite.yaml  dev+retrieval.yaml  dev.yaml  retrieval.yaml  rndp.yaml
config/n_shot_tool/: Dockerfile  config.ttl  connector.rq  docker-compose.yaml  run.sh  start.sh
config/ontology/: cim-subset-pretty.ttl
docker/: Dockerfile  generate-manifest.sh  logging.yaml
docs/: AgentConfig.md  BenchmarkTTYG.md  Evaluation.md  FastAPI.md  JupyterNotebook.md  N-ShotTool.md
evaluation/gpt-4.0/: chat_responses_dev.jsonl  config.yaml
evaluation/gpt-4.1/: chat_responses_test.jsonl  evaluation_summary_dev.yaml
evaluation_results/version_1/: question_instances_full.yaml
evaluation_results/version_1/gpt-4.0/: chat_responses_test.jsonl  evaluation_per_question_dev.yaml  evaluation_per_question_test.yaml  evaluation_summary_dev.yaml  evaluation_summary_test.yaml
evaluation_results/version_1/gpt-4.1/: chat_responses_dev.jsonl  config.yaml  evaluation_per_question_dev.yaml  evaluation_per_question_test.yaml  evaluation_summary_test.yaml
evaluation_results/version_1/gpt-4.1+n-shot/: chat_responses_dev.jsonl  chat_responses_test.jsonl  config.yaml  evaluation_per_question_dev.yaml  evaluation_summary_dev.yaml  qa_dataset.ttl
evaluation_results/version_1/ontology/: cim-subset-pretty.ttl
evaluation_results/version_2/: cim-subset-pretty-ontology.ttl  question_instances_partial_M3_202509.yaml
evaluation_results/version_2/gdb-ttyg-gpt-4.0/: agent.json  evaluation_summary_test.yaml  gdb_responses_dev.txt  gdb_responses_test.txt  graphdb.yaml
evaluation_results/version_2/gdb-ttyg-gpt-4.1/: agent.json  evaluation_per_question_dev.yaml  evaluation_per_question_test.yaml  evaluation_summary_dev.yaml  evaluation_summary_test.yaml  gdb_responses_dev.txt  gdb_responses_test.txt  graphdb.yaml
evaluation_results/version_2/gdb-ttyg-gpt-4o/: evaluation_summary_dev.yaml  gdb_responses_dev.txt
evaluation_results/version_2/gpt-4.0/: chat_responses_dev.jsonl  chat_responses_test.jsonl  evaluation_per_question_dev.yaml  evaluation_per_question_test.yaml  evaluation_summary_test.yaml
evaluation_results/version_2/gpt-4.0+n-shot/: chat_responses_dev.jsonl  chat_responses_test.jsonl  dev+retrieval.yaml  evaluation_per_question_dev.yaml  evaluation_summary_dev.yaml  evaluation_summary_test.yaml
evaluation_results/version_2/gpt-4.1+n-shot+ontology-schema-tool/: dev+retrieval.yaml  evaluation_summary_dev.yaml  (+1 more)
evaluation_results/version_2_2/: cim-subset-pretty.ttl
evaluation_results/version_3/: qa_dataset.trig  question_instances_timeseries_M5_202603.yaml  question_instances_timeseries_M6_202604.yaml
helm-chart/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm-chart/files/: default-agent.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  _labels.tpl  agent-configuration.yaml  configuration-properties.yaml  deployment.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
jupyter_notebooks/: README.md  Talk2PowerSystem.ipynb  config.yaml  nordic44-ontology-query.rq  ontology-schema-query.rq  string-enumerations-query.rq
src/: pyproject.toml
src/fine_tuning/: .gitignore  README.md  agent_hf.py  dev_open_models_no_ontology.yaml  merge.py  requirements.txt  run_train.sh  train.py
src/jupyter_notebooks/: Talk2PowerSystem.ipynb  Talk2PowerSystem_RNDP.ipynb
src/res/2025-06-22T12:35:59Z/: evaluation_per_question_test.yaml  evaluation_summary_test.yaml
src/talk2powersystemllm/: __init__.py  agent.py  config.py  run_evaluation.py  talk_to_power_system_agent.py
src/talk2powersystemllm/app/: dev-docker-compose.yaml  dummy-manifest.yaml  logging.yaml  trouble.md
src/talk2powersystemllm/app/models/: __init__.py  auth.py  models.py  troubleshooting.py
src/talk2powersystemllm/app/server/: about.py  auth.py  config.py  dependencies.py  exceptions.py  lifespan.py  logging_conf.py  logging_config.py  main.py  manifest.py  middleware.py  trouble.py  x_request_id_logging_filter.py
src/talk2powersystemllm/app/server/healthchecks/: __init__.py  cognite_healthcheck.py  graphdb_healthcheck.py  healthchecks.py  llm_healthcheck.py  redis_healthcheck.py
src/talk2powersystemllm/app/server/queries/: about_datasets_query.rq  about_graphdb_query.rq  about_ontologies_query.rq
src/talk2powersystemllm/app/server/routers/: __init__.py  auth.py  chat.py  health.py
src/talk2powersystemllm/app/server/routes/: auth.py  chat.py  health.py
src/talk2powersystemllm/app/server/services/: __init__.py  about.py  about_service.py  auth.py  auth_service.py  chat_service.py  explain_service.py  gtg_service.py  redis_service.py  trouble.py
src/talk2powersystemllm/app/server/services/healthchecks/: __init__.py  cognite_healthcheck.py  graphdb_healthcheck.py  healthchecks.py  llm_healthcheck.py  redis_healthcheck.py
src/talk2powersystemllm/qa_dataset/: __init__.py  load_and_split.py  min_retrieval_limit.py  qa_dataset2rdf.py
src/talk2powersystemllm/scripts/: agent_hf.py  benchmark_graphdb_ttyg.py  find_min_retrieval_limit_on_dev.py  qa_dataset2rdf.py  run_evaluation.py  run_evaluation_hf.py
src/talk2powersystemllm/tools/: __init__.py  graphics_tool.py  now_tool.py  user_datetime_context.py
src/talk2powersystemllm/tools/cognite/: __init__.py  base.py  list_time_series.py  retrieve_data_points.py  retrieve_time_series.py
src/talk2powersystemllm/utils/: __init__.py  gsc_loader.py
tests/acceptance_tests/: conf.py  openai_mock.py  test_app.py
tests/unit_tests/: test_agent.py  test_chat.py  test_cognite_healthcheck.py  test_graphdb_healthcheck.py  test_graphics_tool.py  test_retrieve_data_points.py
(+154 files in other folders)
