[project]
name = "Talk2PowerSystemLLM"
version = "1.7.0-rc1"
description = "Talk to Power System LLM"
authors = []
readme = "README.adoc"
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ttyg==3.1.0",
    "graphrag-eval==5.3.1",
    "jupyter==1.1.1",
    "langchain-openai==1.1.7",
    "langgraph-checkpoint-redis==0.3.2",
    "jsonlines==4.0.0",
    "cognite-sdk==7.91.0",
    "pydantic-settings==2.12.0",
    "PyYAML==6.0.3",
    "uvicorn[standard] (==0.40.0)",
    "fastapi==0.128.0",
    "APScheduler==3.11.2",
    "toml==0.10.2",
    "markdown==3.10",
    "python-jose[cryptography] (==3.5.0)",
    "cachetools==6.2.4",
    "importlib_resources==6.5.2",
]

[project.urls]
repository = "https://github.com/statnett/Talk2PowerSystem_LLM"

[tool.poetry.group.test.dependencies]
pytest = "<10,>=9"
pytest-cov = "<8,>=7"
requests = "<3,>=2"
mockserver-client = "0.0.6"

[tool.poetry.group.test]
optional = true

[[tool.poetry.source]]
name = "statnett"
url = "https://artifactory.statnett.no/artifactory/api/pypi/pypi_statnett_virtual/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
evaluation = 'talk2powersystemllm.scripts.run_evaluation:main'
qa_dataset2rdf = 'talk2powersystemllm.scripts.qa_dataset2rdf:main'
benchmark_graphdb_ttyg = 'talk2powersystemllm.scripts.benchmark_graphdb_ttyg:main'
